--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,6 +27,8 @@ steps:
       - '--region'
       - 'us-central1'
       - '--allow-unauthenticated'
+      - '--set-env-vars'
+      - 'PORT=8080'
 
 images:
   - 'gcr.io/$PROJECT_ID/vue-app:$COMMIT_SHA'
