--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,26 @@
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
     server {
         listen $PORT;
         server_name localhost;
@@ -11,6 +29,13 @@ http {
 
         location / {
             try_files $uri $uri/ /index.html;
+        }
+
+        # Tambahkan tipe MIME untuk modul JavaScript
+        types {
+            application/javascript js mjs;
+            text/javascript js mjs;
+            application/ecmascript es mjs;
         }
     }
 }
