--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,10 @@
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    keepalive_timeout  65;
+    include mime.types;
+    default_type application/octet-stream;
 
     server {
         listen $PORT;
@@ -31,11 +16,9 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # Tambahkan tipe MIME untuk modul JavaScript
-        types {
-            application/javascript js mjs;
-            text/javascript js mjs;
-            application/ecmascript es mjs;
+        # Tambahkan MIME type untuk file JS
+        location ~* \.js$ {
+            add_header Content-Type application/javascript;
         }
     }
 }
