--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,27 @@
-user  nginx;
-worker_processes  1;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+
+worker_processes 4;
+
 events {
-  worker_connections  1024;
+    worker_connections 1024;
 }
+
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-  access_log  /var/log/nginx/access.log  main;
-  sendfile        on;
-  keepalive_timeout  65;
-  server {
-    listen       80;
-    server_name  localhost;
-    location / {
-      root   /app;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
+    server {
+        listen 80;
+        server_name YOUR_SERVER_NAME;
+        charset utf-8;
+        root /usr/share/nginx/html;
+        index index.html;
+
+        #Always serve index.html for any request
+        location / {
+            try_files $uri /index.html;
+            include /etc/nginx/mime.types; <- this fixed my problem with css being read as `text/plain` mimetype
+        }
+        error_log  /var/log/nginx/client-error.log;
+        access_log /var/log/nginx/client-access.log;
+
+        server_tokens off;
+        add_header X-Content-Type-Options nosniff;
     }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   /usr/share/nginx/html;
-    }
-  }
 }
