--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ events {
 
 http {
     server {
-        listen 8080;
+        listen $PORT;
         server_name YOUR_SERVER_NAME;
         charset utf-8;
         root /usr/share/nginx/html;
