--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,3 @@
-
-worker_processes 4;
-
 events {
     worker_connections 1024;
 }
@@ -8,20 +5,13 @@ events {
 http {
     server {
         listen $PORT;
-        server_name YOUR_SERVER_NAME;
-        charset utf-8;
+        server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
 
-        #Always serve index.html for any request
         location / {
-            try_files $uri /index.html;
-            include /etc/nginx/mime.types; <- this fixed my problem with css being read as `text/plain` mimetype
+            try_files $uri $uri/ /index.html;
+            include /etc/nginx/mime.types;
         }
-        error_log  /var/log/nginx/client-error.log;
-        access_log /var/log/nginx/client-access.log;
-
-        server_tokens off;
-        add_header X-Content-Type-Options nosniff;
     }
 }
